2009-04-13  Behdad Esfahbod  <behdad@gnome.org>

	* gconf/gconf-client.c (trace): Use g_message for printing trace
	output, such that G_MESSAGES_PREFIXED=all can be used to print process
	name and id.

=========================== 2.26.0 ===========================

2009-03-16  Ray Strode  <rstrode@redhat.com>

	* NEWS: Updates
	* configure.in: 2.26.0

2009-02-26  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c: (gconf_activate_server):
	Correct the URL to the website.

2009-02-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 572402 – Potential memory leak in markup backend

	* backends/markup-backend.c (tree_lookup_entry): Free parent
	before checking for error. Pointed out by Tommi Rantala.

2009-02-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 572187 – Remove deprecated GTK+ symbols

	* gconf/gnome-testclient.c:
	* gconf/testgconfclient.c:
	* doc/intro-article.sgml: Remove deprecated GTK+ api.

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

=========================== 2.25.2 ===========================

2009-02-16  Ray Strode  <rstrode@redhat.com>

	* gconf/default.path.in: move the directory used by the
	defaults mechanism, so that its effects are mandatory
	(bug 558490).

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

=========================== 2.25.1 ===========================

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 566716 – Update the projects URL

	* README:
	* gconf/gconf-internals.c: Update project website url.
	String change. Requested by Leonardo Ferreira Fontenelle

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 569258 – Use send_destination in dbus policy

	* defaults/org.gnome.GConf.Defaults.conf: Use send_destination.
	Pointed out by Vincent Untz

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 565312 – Use g_timeout_add_seconds
