@@ -1,3 +1,8 @@
+2009-04-14  Behdad Esfahbod  <behdad@gnome.org>
+
+	* gconf/gconf-client.c: Consistently surround string parameters in
+	single-quotes in trace output.
+
 2009-04-13  Behdad Esfahbod  <behdad@gnome.org>
 
 	* gconf/gconf-client.c (trace): Use g_message for printing trace
